--- a/package.json
+++ b/package.json
@@ -4,23 +4,36 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@gluestack-ui/image": "^0.1.10",
+    "@gluestack-ui/nativewind-utils": "^1.0.23",
+    "@gluestack-ui/overlay": "^0.1.15",
+    "@gluestack-ui/spinner": "^0.1.14",
+    "@gluestack-ui/toast": "^1.0.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-css-interop": "^0.0.36",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-svg": "^13.4.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "~18.2.45",
     "eslint": "^8.57.1",
+    "jscodeshift": "^0.15.2",
     "typescript": "^5.1.3"
   },
   "private": true
